crates/valen-parser/tests/snapshots/parser__precedence_mul_binds_tighter_than_add.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn main() { 1 + 2 * 3 }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "main",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Binary(
                            BinaryExpr {
                                op: Add,
                                lhs: Literal(
                                    Int(
                                        1,
                                        Span {
                                            start: 12,
                                            end: 13,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    ),
                                ),
                                rhs: Binary(
                                    BinaryExpr {
                                        op: Mul,
                                        lhs: Literal(
                                            Int(
                                                2,
                                                Span {
                                                    start: 16,
                                                    end: 17,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            ),
                                        ),
                                        rhs: Literal(
                                            Int(
                                                3,
                                                Span {
                                                    start: 20,
                                                    end: 21,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            ),
                                        ),
                                        span: Span {
                                            start: 16,
                                            end: 21,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 12,
                                    end: 21,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 10,
                        end: 23,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 23,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
