crates/valen-parser/tests/snapshots/parser__pub_abstract_class.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"pub abstract class Bar {}\")"
---
=== AST ===
[
    Class(
        ClassDecl {
            annotations: [],
            visibility: Pub,
            kind: Abstract,
            name: "Bar",
            generics: [],
            ctor_params: [],
            supertypes: [],
            derives: [],
            body: [],
            span: Span {
                start: 0,
                end: 25,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
