crates/valen-parser/tests/snapshots/parser__pub_class.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"pub class Foo {}\")"
---
=== AST ===
[
    Class(
        ClassDecl {
            visibility: Pub,
            kind: Final,
            name: "Foo",
            generics: [],
            ctor_params: [],
            supertypes: [],
            body: [],
            span: Span {
                start: 0,
                end: 16,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
