crates/valen-parser/tests/snapshots/parser__pub_fn.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"pub fn main() {}\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Pub,
            name: "main",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [],
                    tail: None,
                    span: Span {
                        start: 14,
                        end: 16,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            span: Span {
                start: 0,
                end: 16,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
