crates/valen-parser/tests/snapshots/parser__return_expr.snap
---
source: crates/valen-parser/tests/parser.rs
assertion_line: 243
expression: "check(\"fn f(x: Int) -> Int { return x; }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "f",
            generics: [],
            params: [
                Param {
                    name: "x",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "Int",
                                    generics: [],
                                    span: Span {
                                        start: 8,
                                        end: 11,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 8,
                                end: 11,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    default: None,
                    span: Span {
                        start: 5,
                        end: 11,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "Int",
                                generics: [],
                                span: Span {
                                    start: 16,
                                    end: 19,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 16,
                            end: 19,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [
                        ExprSemi(
                            Return(
                                ReturnExpr {
                                    value: Some(
                                        Path(
                                            Path {
                                                segments: [
                                                    PathSegment {
                                                        name: "x",
                                                        double_colon: false,
                                                        generics: [],
                                                        span: Span {
                                                            start: 29,
                                                            end: 30,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ],
                                                span: Span {
                                                    start: 29,
                                                    end: 30,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                    ),
                                    span: Span {
                                        start: 22,
                                        end: 30,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ),
                        ),
                    ],
                    tail: None,
                    span: Span {
                        start: 20,
                        end: 33,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            is_inline: false,
            span: Span {
                start: 0,
                end: 33,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
