crates/valen-parser/tests/snapshots/parser__return_no_value.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f() { return; }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            visibility: Internal,
            name: "f",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [
                        ExprSemi(
                            Return(
                                ReturnExpr {
                                    value: None,
                                    span: Span {
                                        start: 9,
                                        end: 15,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ),
                        ),
                    ],
                    tail: None,
                    span: Span {
                        start: 7,
                        end: 18,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 18,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
