crates/valen-parser/tests/snapshots/parser__safe_block.snap
---
source: crates/valen-parser/tests/parser.rs
assertion_line: 472
expression: "check(\"fn f() { safe { call() } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "f",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Safe(
                            SafeExpr {
                                block: Block {
                                    stmts: [],
                                    tail: Some(
                                        Call(
                                            CallExpr {
                                                callee: Path(
                                                    Path {
                                                        segments: [
                                                            PathSegment {
                                                                name: "call",
                                                                double_colon: false,
                                                                generics: [],
                                                                span: Span {
                                                                    start: 16,
                                                                    end: 20,
                                                                    file_id: FileId(
                                                                        0,
                                                                    ),
                                                                },
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 16,
                                                            end: 20,
                                                            file_id: FileId(
                                                                0,
                                                            ),
                                                        },
                                                    },
                                                ),
                                                generics: [],
                                                args: [],
                                                span: Span {
                                                    start: 16,
                                                    end: 22,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ),
                                    ),
                                    span: Span {
                                        start: 14,
                                        end: 24,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 24,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 7,
                        end: 26,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            is_inline: false,
            span: Span {
                start: 0,
                end: 26,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
